--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -73,7 +73,7 @@
         "outputId": "8fdde835-a56a-46d7-dd95-f761c431d069",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 469
         }
       },
       "id": "5quyHLn2pi17",
@@ -906,7 +906,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 192
+          "height": 229
         },
         "id": "J67Qmy47Nf5g",
         "outputId": "1ba8bc00-ded8-4ce2-8164-f0b97a2f1a75"
@@ -2691,7 +2691,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 174
+          "height": 194
         },
         "id": "L7m9jguGWHfZ",
         "outputId": "a5433c03-0ab8-475f-9752-851a4f40c2d9"
@@ -4812,7 +4812,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 466
+          "height": 573
         },
         "id": "NM9EVEasYtdt",
         "outputId": "bb6f7a17-ccd9-4b87-d8b1-2aae86502c81"
@@ -6165,12 +6165,12 @@
         "pd.crosstab(shark_data['Sex'], shark_data['Type'] == 'Unprovoked')"
       ],
       "metadata": {
-        "id": "a1lm9P-jjeI4",
-        "outputId": "03fa1941-9ed5-4ef4-e838-fe1c755d0b9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 174
-        }
+        },
+        "id": "a1lm9P-jjeI4",
+        "outputId": "03fa1941-9ed5-4ef4-e838-fe1c755d0b9a"
       },
       "id": "a1lm9P-jjeI4",
       "execution_count": 116,
@@ -6460,12 +6460,12 @@
         "pd.crosstab(shark_data['Fatal Y/N'], shark_data['Type'])"
       ],
       "metadata": {
-        "id": "qGSnrjBtj5Cn",
-        "outputId": "91a34f4e-8355-404e-8507-6b0aa28bb70e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 174
-        }
+        },
+        "id": "qGSnrjBtj5Cn",
+        "outputId": "91a34f4e-8355-404e-8507-6b0aa28bb70e"
       },
       "id": "qGSnrjBtj5Cn",
       "execution_count": 117,
@@ -6760,12 +6760,12 @@
         "pd.crosstab(shark_data['Sex'], shark_data['Fatal Y/N'])"
       ],
       "metadata": {
-        "id": "JfZ0_aXVkUCI",
-        "outputId": "fd9a5565-d8ed-40a0-ce69-bbdf0f0040ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 174
-        }
+        },
+        "id": "JfZ0_aXVkUCI",
+        "outputId": "fd9a5565-d8ed-40a0-ce69-bbdf0f0040ae"
       },
       "id": "JfZ0_aXVkUCI",
       "execution_count": 118,
@@ -7073,11 +7073,11 @@
         "shark_data['Species '].unique()"
       ],
       "metadata": {
-        "id": "UiC2iBTpkwle",
-        "outputId": "c22391b3-0630-4f80-aff1-a93d5df7e47b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UiC2iBTpkwle",
+        "outputId": "c22391b3-0630-4f80-aff1-a93d5df7e47b"
       },
       "id": "UiC2iBTpkwle",
       "execution_count": 127,
@@ -7116,11 +7116,11 @@
         "len(white_shark)/len(shark_data['Species'])"
       ],
       "metadata": {
-        "id": "Q3F6qzBQlsBR",
-        "outputId": "41945b7a-2a95-4ba4-e5d0-080ae1604277",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q3F6qzBQlsBR",
+        "outputId": "41945b7a-2a95-4ba4-e5d0-080ae1604277"
       },
       "id": "Q3F6qzBQlsBR",
       "execution_count": 129,
@@ -7155,6 +7155,21 @@
         "  7. Why, specifically, is table 11 messy but table 12 tidy and \"molten\"?\n",
         "  8. Read Section 6. What is the \"chicken-and-egg\" problem with focusing on tidy data? What does Wickham hope happens in the future with further work on the subject of data wrangling?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. The paper is about how to clean data effectively and make the data 'tidy'.\n",
+        "2. The \"tidy data standard\" intended to ease the process of data cleaning and facilitate initial analysis.\n",
+        "3. The \"Like families..\" sentence means that every messy data set has unique challenges and difficulties. The \"For a given...\" sentence means that observations and variables are such fluid, broad terms that there is no real general defintion as it must always be in the context of the dataset.\n",
+        "4. Wickham defines values as the collection of things that make a dataset. He defines variables as all values that measure the same attribue and observations all values measured on the same unite across attributes (basically columns and rows respectively).\n",
+        "5. Tidy data is defined as having each variable in a column, each observation in a rose, and each type of observational unit forming a table.\n",
+        "6."
+      ],
+      "metadata": {
+        "id": "_hP6eHGhmGuT"
+      },
+      "id": "_hP6eHGhmGuT"
     },
     {
       "cell_type": "markdown",
