--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -37,7 +37,7 @@
         "id": "N_LGy9rxoh0g"
       },
       "id": "N_LGy9rxoh0g",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "id": "ZyqeytMrn3wY"
       },
       "id": "ZyqeytMrn3wY",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         }
       },
       "id": "5quyHLn2pi17",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
         }
       },
       "id": "9dA37_S4q5ig",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +533,7 @@
         }
       },
       "id": "ROUlKV63rGyh",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
         "id": "gc1its_SfUeM"
       },
       "id": "gc1its_SfUeM",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
         }
       },
       "id": "A5BdQL7zf3w7",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +677,7 @@
         "id": "pS_dJJp1JsLj"
       },
       "id": "pS_dJJp1JsLj",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +693,7 @@
         "outputId": "1c37df35-9820-4607-a859-a478a4248d3e"
       },
       "id": "MDR1-1a2KXbo",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +721,7 @@
         "outputId": "b82a5f6c-1d8f-4ff2-df90-ab3fc1c612f0"
       },
       "id": "fLiK2J04LpEN",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +791,7 @@
         "outputId": "b37dbe11-b5bc-4431-ba01-ffdc8a6eb39d"
       },
       "id": "9uEeHoLiLvwT",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +814,7 @@
         "id": "BivTzsvMM-ti"
       },
       "id": "BivTzsvMM-ti",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -830,7 +830,7 @@
         "outputId": "8dd7306d-ae67-4c7a-91da-6139af51aa01"
       },
       "id": "t2tf7zxtNSNw",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         "outputId": "ab8741bb-6b52-4309-c61b-c6a226631d0d"
       },
       "id": "BprarjrTMT94",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -884,7 +884,7 @@
         "outputId": "b427e7d9-10aa-4667-f119-98f285262b30"
       },
       "id": "Lu-7tie5MaZQ",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,7 +912,7 @@
         "outputId": "1ba8bc00-ded8-4ce2-8164-f0b97a2f1a75"
       },
       "id": "J67Qmy47Nf5g",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1348,7 +1348,7 @@
         "outputId": "25d7edec-2ea9-41b7-8f7f-bcc1e9773151"
       },
       "id": "3OXTcB5-OPrc",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1568,7 +1568,7 @@
         "outputId": "24ad5f38-75f7-466e-a791-3b8ee3dc2377"
       },
       "id": "GSLznuSdQsQu",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2069,7 +2069,7 @@
         "outputId": "b86b28a5-d62b-4d0d-8799-ab832891ac0c"
       },
       "id": "o4caIVSgRWG9",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2096,7 +2096,7 @@
         "outputId": "08c20fcc-b1b1-4120-c8c9-b40514973b1e"
       },
       "id": "rhGpkSK2RXyb",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2124,7 +2124,7 @@
         "outputId": "c4a3639f-2833-4a2a-a4e3-a4502a1d0f6f"
       },
       "id": "AE89ehwNRdLb",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2218,7 +2218,7 @@
         "outputId": "0fadfbb7-6356-4d03-a1f1-22b97c4463d6"
       },
       "id": "GYsMBHVwR33D",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2248,7 +2248,7 @@
         "outputId": "4f5e0a3c-239e-4b83-83b1-2f90833accf6"
       },
       "id": "lFAltfLEToNQ",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2697,7 +2697,7 @@
         "outputId": "a5433c03-0ab8-475f-9752-851a4f40c2d9"
       },
       "id": "L7m9jguGWHfZ",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3075,7 +3075,7 @@
         "id": "0BuPXlLFYZec"
       },
       "id": "0BuPXlLFYZec",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3091,7 +3091,7 @@
         "outputId": "001aa996-fff5-4dc8-fae7-7e2d4bd2b2c8"
       },
       "id": "7NU6CAQKZrIz",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3121,7 +3121,7 @@
         "outputId": "e19457bb-9166-4449-9cee-fde342719b3c"
       },
       "id": "kz2KqmbFbT6R",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3159,7 +3159,7 @@
         "outputId": "220ffa85-bb25-4e37-944f-c89a24386bae"
       },
       "id": "kT-Wk9RubxK8",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3274,7 +3274,7 @@
         "outputId": "7a27f8b6-d231-41e5-ac98-3165e5a391bf"
       },
       "id": "DgNyizXelO4b",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3301,7 +3301,7 @@
         "outputId": "c7181940-4ffb-4f0f-e75f-6677a68301d9"
       },
       "id": "xc7Irapqk8NR",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3328,7 +3328,7 @@
         "outputId": "3c96ddee-76f1-424e-dbb3-7be561cb8504"
       },
       "id": "1adKSqH7lCn_",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3355,7 +3355,7 @@
         "outputId": "4b5121be-9365-450b-da35-f9f8bf458328"
       },
       "id": "VGkGTN_9lRpd",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3383,7 +3383,7 @@
         "outputId": "b1293388-9451-425e-a536-0aef5ec6e1a6"
       },
       "id": "RH_2LpRWkDDb",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3468,7 +3468,7 @@
         "outputId": "07313904-57da-48e3-84f8-066acab8a272"
       },
       "id": "OY8FyHKgWwr1",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3545,7 +3545,7 @@
         "id": "QZpFOa1Aku4x"
       },
       "id": "QZpFOa1Aku4x",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3563,7 +3563,7 @@
         "outputId": "f074bc49-dd56-433f-ebe9-8bc7ae39fdf2"
       },
       "id": "dyVHxSHsmaEp",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4104,7 +4104,7 @@
         "id": "9dPvpEjZW2QB"
       },
       "id": "9dPvpEjZW2QB",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4143,7 +4143,7 @@
         "outputId": "3c38a456-ad5b-4112-ea99-8ad4b6e084c1"
       },
       "id": "uYnGN8T1YX1g",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4363,7 +4363,7 @@
         "outputId": "c4499927-bc32-474d-e222-fde2cfad72be"
       },
       "id": "dSF4fVIaYgQp",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4818,7 +4818,7 @@
         "outputId": "bb6f7a17-ccd9-4b87-d8b1-2aae86502c81"
       },
       "id": "NM9EVEasYtdt",
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5233,7 +5233,7 @@
         "outputId": "13ebae74-b496-49f9-f09a-e6bc27c058e6"
       },
       "id": "dZb-vqisZqKj",
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5344,7 +5344,7 @@
         "id": "48lET0amZzpO"
       },
       "id": "48lET0amZzpO",
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5361,7 +5361,7 @@
         "outputId": "64dbce6a-f49e-42d4-ce0b-b4a6411e3424"
       },
       "id": "AKs7AVd8aaEp",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5487,7 +5487,7 @@
         "outputId": "37935792-5392-45d2-c138-3939a1407b51"
       },
       "id": "zbn5uU_dateb",
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5602,7 +5602,7 @@
         "outputId": "0e20e4f8-1a03-4513-aec9-4d8c442004c4"
       },
       "id": "C-l64gtXbnDA",
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5655,7 +5655,7 @@
         "id": "GZpa2vaSbcrv"
       },
       "id": "GZpa2vaSbcrv",
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5673,7 +5673,7 @@
         "outputId": "3cc7e33f-1084-4e31-c3d0-f318a3d6a937"
       },
       "id": "4ovWYIVxeHUa",
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5713,7 +5713,7 @@
         "outputId": "3b13e88b-f6dd-4a52-da6d-188546e43117"
       },
       "id": "ni0mTdTcf668",
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5802,7 +5802,7 @@
         "outputId": "6cbee83b-1cd5-4236-95b5-42f831340d97"
       },
       "id": "kfBXBREHgvDy",
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5831,7 +5831,7 @@
         "outputId": "35701844-e7e5-4cf3-b157-9a715d160c75"
       },
       "id": "r1kEFc8vgyZi",
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5905,7 +5905,7 @@
         "outputId": "fca3c85e-f978-42a5-b2a5-79d2705f5f7a"
       },
       "id": "tfDksKB0g9ox",
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5932,7 +5932,7 @@
         "outputId": "34ad0688-514d-48a2-9ea3-64f047a36dd9"
       },
       "id": "tunDtoqihMQU",
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5965,7 +5965,7 @@
         "outputId": "35be5eab-c261-4dfa-a76f-1c94e673dd42"
       },
       "id": "a13zaZv2hTop",
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6039,7 +6039,7 @@
         "outputId": "85b10317-04d7-4ae6-cbaf-fbad27320d38"
       },
       "id": "d2JqIPeoh3as",
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6066,7 +6066,7 @@
         "outputId": "0a434b51-a5aa-4c8a-cc0b-e9610838b6de"
       },
       "id": "pxff5uTSiNWE",
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6098,7 +6098,7 @@
         "outputId": "1e2d4903-4919-4bab-a5d5-054679cacbf0"
       },
       "id": "R5zMzjTSiSjy",
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6173,7 +6173,7 @@
         "outputId": "03fa1941-9ed5-4ef4-e838-fe1c755d0b9a"
       },
       "id": "a1lm9P-jjeI4",
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6468,7 +6468,7 @@
         "outputId": "91a34f4e-8355-404e-8507-6b0aa28bb70e"
       },
       "id": "qGSnrjBtj5Cn",
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6768,7 +6768,7 @@
         "outputId": "fd9a5565-d8ed-40a0-ce69-bbdf0f0040ae"
       },
       "id": "JfZ0_aXVkUCI",
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7080,7 +7080,7 @@
         "outputId": "c22391b3-0630-4f80-aff1-a93d5df7e47b"
       },
       "id": "UiC2iBTpkwle",
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7107,7 +7107,7 @@
         "id": "hleLiWggk-cX"
       },
       "id": "hleLiWggk-cX",
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7123,7 +7123,7 @@
         "outputId": "41945b7a-2a95-4ba4-e5d0-080ae1604277"
       },
       "id": "Q3F6qzBQlsBR",
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7164,7 +7164,9 @@
         "3. The \"Like families..\" sentence means that every messy data set has unique challenges and difficulties. The \"For a given...\" sentence means that observations and variables are such fluid, broad terms that there is no real general defintion as it must always be in the context of the dataset.\n",
         "4. Wickham defines values as the collection of things that make a dataset. He defines variables as all values that measure the same attribue and observations all values measured on the same unite across attributes (basically columns and rows respectively).\n",
         "5. Tidy data is defined as having each variable in a column, each observation in a rose, and each type of observational unit forming a table.\n",
-        "6."
+        "6. The five most common problems with messy datasets are have column headers as values not variable names, multiple variables being stored in one column, variables being stored in both rows and columns, multiple types of observational unites stored in the same table, and a single observational unit being stored in multiple tables at the same time. The data in Table 4 is messy because the variables are being stored in rows not in the columns. \"Melting\" a datset is a method of stacking the dataset where columns are typically turned into rows and vice versa.\n",
+        "7. Table 11 is messay but Table 12 is not because there are a ton of extra observational units in Table 11 that are unnecessary and add nothing to the dataset.\n",
+        "8. The \"chicken-and-egg\" problem with focusing on tidy data is that tidy tools will always be linked to tidy data if tidy data is only as useful as the tools to wokr with it. Wickman hopes that in the future with further work on the subject of data wrangling, other frameworks and strategies will be developed to make cleaning data easier."
       ],
       "metadata": {
         "id": "_hP6eHGhmGuT"
