finishing up work

--- a/lab/lab_notebook.ipynb
+++ b/lab/lab_notebook.ipynb
@@ -1757,11 +1757,11 @@
         "print(listings_boat[0].prettify())"
       ],
       "metadata": {
-        "id": "iFBayxytcWHK",
-        "outputId": "e117f54a-7433-4c34-f5d1-685ae68879bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iFBayxytcWHK",
+        "outputId": "e117f54a-7433-4c34-f5d1-685ae68879bf"
       },
       "execution_count": 48,
       "outputs": [
@@ -1839,12 +1839,12 @@
         "df_boat.head()"
       ],
       "metadata": {
-        "id": "vJuez54dZYXo",
-        "outputId": "39a44dc6-0d8e-4242-e3c0-36bee0e6943a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        }
+        },
+        "id": "vJuez54dZYXo",
+        "outputId": "39a44dc6-0d8e-4242-e3c0-36bee0e6943a"
       },
       "execution_count": 75,
       "outputs": [
@@ -2183,12 +2183,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "puSwlNkQc7g9",
-        "outputId": "f0860dd7-e15c-4ffc-b9fc-d60e63fe8d13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "puSwlNkQc7g9",
+        "outputId": "f0860dd7-e15c-4ffc-b9fc-d60e63fe8d13"
       },
       "execution_count": 76,
       "outputs": [
@@ -2251,12 +2251,12 @@
         "df_boat.loc[:,['price','brand']].groupby('brand').describe()"
       ],
       "metadata": {
-        "id": "6-imp0hMdmlR",
-        "outputId": "23358168-e747-492d-be07-5a84ae7b9047",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 519
-        }
+        },
+        "id": "6-imp0hMdmlR",
+        "outputId": "23358168-e747-492d-be07-5a84ae7b9047"
       },
       "execution_count": 77,
       "outputs": [
@@ -2722,12 +2722,12 @@
         "sns.move_legend(ax, \"upper left\", bbox_to_anchor=(1, 1))"
       ],
       "metadata": {
-        "id": "cuXyW2HQgT7e",
-        "outputId": "0106330a-6a92-4e7a-a2b1-653d5868feb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "cuXyW2HQgT7e",
+        "outputId": "0106330a-6a92-4e7a-a2b1-653d5868feb3"
       },
       "execution_count": 79,
       "outputs": [
@@ -2742,6 +2742,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The scatter plot illustratess a few minor trends of correlation between age increasing and the price of the boat going down, with a little bit of appeared clustering of brands. However really this trend highlights how non-standard boat pricing and therefore listing are as there are not just a few boat brands and many of the listings didn't even include the price in the front page that was scraped."
+      ],
+      "metadata": {
+        "id": "-8AWii2dV30S"
+      }
     }
   ],
   "metadata": {
